added 'add booking' button

--- a/app/pages/booking/booking.component.html
+++ b/app/pages/booking/booking.component.html
@@ -4,17 +4,26 @@
             <div class="card-header card-header-tabs" data-background-color="darkblue">
                 <div class="nav-tabs-navigation">
                     <div class="nav-tabs-wrapper">
-                        <ul id="myTabs" class="nav nav-tabs" data-tabs="tabs">
-                            <li class="active">
-                                <a href="#forthcoming" data-toggle="tab">Forthcoming</a>
-                            </li>
-                            <li class="">
-                                <a href="#current" data-toggle="tab">Current</a>
-                            </li>
-                            <li class="">
-                                <a href="#past" data-toggle="tab">Past</a>
-                            </li>
-                        </ul>
+                        <div class="row">
+                            <div class="col-xs-10">
+                                <ul id="myTabs" class="nav nav-tabs" data-tabs="tabs">
+                                    <li class="active">
+                                        <a href="#forthcoming" data-toggle="tab">Forthcoming</a>
+                                    </li>
+                                    <li class="">
+                                        <a href="#current" data-toggle="tab">Current</a>
+                                    </li>
+                                    <li class="">
+                                        <a href="#past" data-toggle="tab">Past</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-xs-2">
+                                <button type="button" class="btn btn-success-green font-16 pull-right m-t-b-none">
+                                    <i class="material-icons">add</i>Add Booking
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
