--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -143,6 +143,10 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .m-b-none {
 	margin-bottom: 0px;
 }
+.m-t-b-none {
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
 .m-t-5 {
 	margin-top: 5px;
 }
@@ -499,11 +503,11 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 	min-width: 120px;
 	padding: 12px 15px;
 	background-color: #00bfa5;
-	box-shadow: 0px 7px 12px 0 rgba(83, 153, 188, 0.4);
+	box-shadow: 0px 7px 10px 0 rgba(0, 191, 165, 0.4);
 }
 .btn.btn-success-green:hover, .btn.btn-success-green:active, .btn.btn-success-green:focus, .btn.btn-success-green:focus:active, .btn.btn-success-green:active:hover {
 	background-color: #09907e;
-	box-shadow: 0px 7px 12px 0 rgba(83, 153, 188, 0.4);
+	box-shadow: 0px 7px 12px 0 rgba(0, 191, 165, 0.4);
 }
 .btn.btn-success.btn-simple,
 .navbar .navbar-nav > li > a.btn.btn-success.btn-simple {
