added hover effect

--- a/app/components/tables/forthcoming/forthcoming.component.css
+++ b/app/components/tables/forthcoming/forthcoming.component.css
@@ -1,5 +1,6 @@
-.table-enquiries > tbody > tr {
+.table-enquiries > tbody > tr:hover {
     cursor: pointer;
+    background-color: #e7ebed;
 }
 .table-enquiries > tbody > tr > td:first-child,
 .table-enquiries > tbody > tr > td:last-child,
