Enquiry Dialog - Incorrect Villa Image

--- a/app/components/modal/enquiry/enquiry.component.html
+++ b/app/components/modal/enquiry/enquiry.component.html
@@ -4,8 +4,9 @@
             <form [formGroup]="enquiryForm" *ngIf="data" (submit)="onSubmit(enquiryForm.value)">
                 <div class="modal-header">
                     <div class="image-villa">
-                        <cl-image data-u="image"
-                                  public-id="z7iro8k17pc69cguzetw"
+                        <cl-image *ngIf="!data.ImageId"
+                                  data-u="image"
+                                  [public-id]="data.ImageId"
                                   cloud-name="privadia"
                                   class="md-card-image"
                                   crop="fill"
@@ -15,6 +16,7 @@
                                   width="600"
                                   format="jpg">
                         </cl-image>
+                        <img *ngIf="data.ImageId" class="img" src="../assets/img/image_placeholder.jpg">
                     </div>
                     <div class="villa-container">
                         <h4 class="modal-title">{{data.Name}} <span class="location"><i class="material-icons">place</i> {{data.RegionName}}</span></h4>
