--- a/app/components/villa/villa.component.html
+++ b/app/components/villa/villa.component.html
@@ -1,7 +1,7 @@
 
 <div class="card card-product">
     <div class="card-image" data-header-animation="true">
-        <a href="#pablo">
+        <a href="javascript:;">
             <img class="img" src="{{ villa.ImageId ? 'http://res.cloudinary.com/privadia/image/upload/c_fill,h_280,w_430/c_fill,q_80/' + villa.ImageId + '.jpg' : '../assets/img/image_placeholder.jpg' }}">
         </a>
     </div>
@@ -26,7 +26,7 @@
         </div>
         <div class="row">
             <h4 class="card-title m-b-15 col-lg-12 col-md-12 col-sm-12">
-                <a href="#pablo">{{villa.Name}}</a>
+                <a href="javascript:;">{{villa.Name}}</a>
             </h4>
         </div>
         <div class="row">
