--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -3662,6 +3662,13 @@ be a descendant of the grid when it is being dragged.
 .wizard-card[data-color="green"] .radio input[type=radio]:checked ~ .circle {
   border-color: #4caf50;
 }
+.wizard-card[data-color="dark-blue"] {
+  box-shadow: none;
+}
+.wizard-card[data-color="dark-blue"] .moving-tab {
+  background-color: #5399bc;
+  box-shadow: 0px 7px 12px 0 rgba(83, 153, 188, 0.4);
+}
 .wizard-card[data-color="blue"] .moving-tab {
   background-color: #00bcd4;
   box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(0, 188, 212, 0.4);
