--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -128,7 +128,7 @@
                         </button>
                     </div>
                     <div class="col-xs-8">
-                        <button class="btn btn-success pull-right font-16 m-r-20 p-l-r-20" type="submit" [disabled]="sending">Save</button>
+                        <button id="wizard-form" class="btn btn-success pull-right font-16 m-r-20 p-l-r-20" type="submit" [disabled]="sending">Save</button>
                         <div class="togglebutton pull-right">
                             <label>
                                 <input type="checkbox" formControlName="Active" *ngIf="isLoad"> Active status
