Messages - Enquires unclickable

--- a/app/pages/message/enquiry/enquiry.component.html
+++ b/app/pages/message/enquiry/enquiry.component.html
@@ -6,19 +6,19 @@
                     <div class="nav-tabs-wrapper">
                         <ul id="myTabs" class="nav nav-tabs" data-tabs="tabs">
                             <li class="">
-                                <a [routerLink]="['/message']" fragment="notifications" data-toggle="tab">
+                                <a [routerLink]="['/messages']" fragment="notifications" data-toggle="tab">
                                     <i class="material-icons">notifications</i> Notifications
                                     <div class="ripple-container"></div>
                                 </a>
                             </li>
                             <li class="">
-                                <a [routerLink]="['/message']" fragment="enquiries" data-toggle="tab">
+                                <a [routerLink]="['/messages']" fragment="enquiries" data-toggle="tab">
                                     <i class="material-icons">info</i> Enquiries (1)
                                     <div class="ripple-container"></div>
                                 </a>
                             </li>
                             <li class="">
-                                <a [routerLink]="['/message']" fragment="bookings" data-toggle="tab">
+                                <a [routerLink]="['/messages']" fragment="bookings" data-toggle="tab">
                                     <i class="material-icons">confirmation_number</i> Bookings
                                     <div class="ripple-container"></div>
                                 </a>
