--- a/app/pages/properties/setrates/setrates.component.html
+++ b/app/pages/properties/setrates/setrates.component.html
@@ -93,7 +93,7 @@
                                             <button class="btn btn-simple btn-edit btn-icon"
                                                     type="button"
                                                     *ngIf="isEdit[i]"
-                                                    (click)="editRates({index: i, propertyId: 1})">
+                                                    (click)="saveRates({index: i, propertyId: 1})">
                                                 <i class="material-icons text-primary">done</i>
                                             </button>
                                             <button class="btn btn-simple btn-delete btn-icon"
