added delete rate

--- a/app/pages/properties/setrates/setrates.component.html
+++ b/app/pages/properties/setrates/setrates.component.html
@@ -78,7 +78,7 @@
                                             <button class="btn btn-simple btn-delete btn-icon"
                                                     type="button"
                                                     *ngIf="!isEdit[i]"
-                                                    (click)="removeRates({index: i})">
+                                                    (click)="deleteRate({index: i})">
                                                 <i class="material-icons text-danger">delete</i>
                                             </button>
                                             <button class="btn btn-simple btn-edit btn-icon"
