--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -262,6 +262,9 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 /**
  *  Font
  */
+.font-14 {
+	font-size: 14px !important;
+}
 .font-16 {
 	font-size: 16px !important;
 }
