Reorder capacity numbers

--- a/app/components/booking/property-info/property-info.component.html
+++ b/app/components/booking/property-info/property-info.component.html
@@ -30,13 +30,13 @@
             <div class="col-xs-12">
                 <div class="icons-group">
                     <div class="feature">
-                        <i class="material-icons">hot_tub</i><span> 1</span>
+                        <i class="material-icons">group</i><span> Sleeps</span>
                     </div>
                     <div class="feature">
-                        <i class="material-icons">hotel</i><span> 2</span>
+                        <i class="material-icons">hotel</i><span> Bedrooms</span>
                     </div>
                     <div class="feature">
-                        <i class="material-icons">group</i><span> 3</span>
+                        <i class="material-icons">hot_tub</i><span> Bathrooms</span>
                     </div>
                 </div>
             </div>
