Dates are showing US format

--- a/app/components/tables/enquiries/enquiries.component.html
+++ b/app/components/tables/enquiries/enquiries.component.html
@@ -46,7 +46,7 @@
             </td>
             <td>{{ item.RecipientName }}</td>
             <td>{{ item.Subject }}</td>
-            <td>{{ dateFormat(item.SentAt, 'D MMMM h:mmA') }}</td>
+            <td>{{ dateFormat(item.SentAt, 'MMMM D, h:mm A') }}</td>
             <td>
                 <div class="enquiry-status1">{{item.EnquiryStatusDesc}}</div>
             </td>
