--- a/app/components/tables/forthcoming/forthcoming.component.html
+++ b/app/components/tables/forthcoming/forthcoming.component.html
@@ -33,7 +33,7 @@
                 <td>{{ item.ClientName }}</td>
                 <td>{{ item.PropertyName }}</td>
                 <td>
-                    {{ dateFormat(item.CheckIn, 'DD/MM/YYYY') }} - {{ dateFormat(item.CheckOut, 'DD/MM/YYYY') }}
+                    {{ dateFormat(item.CheckIn, 'MM/DD/YYYY') }} - {{ dateFormat(item.CheckOut, 'MM/DD/YYYY') }}
                 </td>
                 <td class="button-cell">
                     <button class="btn btn-simple btn-icon">
