--- a/app/pages/booking/booking-id/booking-id.component.html
+++ b/app/pages/booking/booking-id/booking-id.component.html
@@ -33,6 +33,17 @@
             <div class="card-content p-l-r-none p-t-none">
                 <div class="tab-content m-t-none">
                     <div class="tab-pane active" id="forthcoming">
+                        <div class="booking-detail">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <property-info-cmp *ngIf="bookingService.booking" [data]="bookingService.booking"></property-info-cmp>
+                                    <payment-status-cmp *ngIf="bookingService.booking" [data]="bookingService.booking.Payments"></payment-status-cmp>
+                                </div>
+                                <div class="col-md-6">
+                                    <proposal-cmp [data]="enquiryService.enquiry"></proposal-cmp>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane" id="current">
                         <!--
@@ -43,19 +54,6 @@
 
                     </div>
                     <div class="tab-pane" id="forthcoming-details">
-                        <div class="booking-detail">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <property-info-cmp [data]=""></property-info-cmp>
-                                    <payment-status-cmp></payment-status-cmp>
-                                </div>
-                                <div class="col-md-6">
-                                    <!--
-                                    <proposal-cmp [data]=""></proposal-cmp>
-                                    -->
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
