hide 'add booking'

--- a/app/pages/booking/booking-id/booking-id.component.html
+++ b/app/pages/booking/booking-id/booking-id.component.html
@@ -21,7 +21,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="col-xs-2">
+                            <div class="col-xs-2 hidden">
                                 <button type="button" class="btn btn-success-green font-16 pull-right m-t-b-none">
                                     <i class="material-icons">add</i>Add Booking
                                 </button>
