--- a/app/components/booking/property-info/property-info.component.html
+++ b/app/components/booking/property-info/property-info.component.html
@@ -1,25 +1,25 @@
-<div class="property-info">
+<div class="property-info" *ngIf="propertiesService.property">
     <div class="enquiry-header">
         <div class="image-wrp">
             <div class="image-villa">
-                <cl-image
-                        data-u="image"
-                        public-id=""
-                        cloud-name="privadia"
-                        class="md-card-image"
-                        crop="fill"
-                        gravity="auto"
-                        quality="80"
-                        height="150"
-                        width="600"
-                        format="jpg">
+                <cl-image *ngIf="propertiesService.property.Images[0]"
+                          data-u="image"
+                          public-id="{{propertiesService.property.Images[0].ImageId}}"
+                          cloud-name="privadia"
+                          class="md-card-image"
+                          crop="fill"
+                          gravity="auto"
+                          quality="80"
+                          height="150"
+                          width="600"
+                          format="jpg">
                 </cl-image>
-                <img height="150" class="img" src="../assets/img/image_placeholder.jpg">
+                <img *ngIf="!propertiesService.property.Images[0]" height="150" class="img" src="../assets/img/image_placeholder.jpg">
             </div>
         </div>
         <div class="villa-container left">
-            <h4 class="enquiry-title">Title</h4>
-            <p class="location"><i class="material-icons">place</i>Location</p>
+            <h4 class="enquiry-title">{{propertiesService.property.Name}}</h4>
+            <p class="location"><i class="material-icons">place</i> {{propertiesService.property.Region.Name}}</p>
         </div>
         <div class="villa-container right">
             <button class="btn btn-success pull-right font-16 m-r-10">View enquiry</button>
@@ -30,13 +30,13 @@
             <div class="col-xs-12">
                 <div class="icons-group">
                     <div class="feature">
-                        <i class="material-icons">hot_tub</i><span> 1</span>
+                        <i class="material-icons">hot_tub</i><span>{{propertiesService.property.Bathrooms}}</span>
                     </div>
                     <div class="feature">
-                        <i class="material-icons">hotel</i><span> 2</span>
+                        <i class="material-icons">hotel</i><span>{{propertiesService.property.Bedrooms}}</span>
                     </div>
                     <div class="feature">
-                        <i class="material-icons">group</i><span> 3</span>
+                        <i class="material-icons">group</i><span>{{propertiesService.property.Sleeps}}</span>
                     </div>
                 </div>
             </div>
@@ -45,39 +45,31 @@
             <div class="col-xs-12">
                 <div class="icons-group">
                     <div class="feature">
-                        <i class="material-icons">person</i><span class="font-16">Person</span>
+                        <i class="material-icons">person</i><span class="font-16">{{data.ClientName}}</span>
                     </div>
                     <div class="feature">
-                        <i class="material-icons">event</i><span class="font-16">01/01/01 - 01/01/01</span>
+                        <i class="material-icons">event</i><span class="font-16">{{dateFormat(data.CheckIn, 'MM/DD/YYYY')}} - {{dateFormat(data.CheckOut, 'MM/DD/YYYY')}}</span>
                     </div>
                 </div>
-
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="material-icons">mail</i></span>
-                    <!--replace by input-field-cmp-->
                     <div class="form-group label-floating">
                         <label class="control-label">Email</label>
-                        <input
-                               type="text"
+                        <input type="text"
                                class="form-control"
                                value="maryjohnson120@mail.com">
                     </div>
-                    <!--end replace by input-field-cmp-->
                 </div>
                 <div class="input-group">
                     <span class="input-group-addon"><i class="material-icons">assignment</i></span>
-                    <!--replace by input-field-cmp-->
                     <div class="form-group label-floating">
                         <label class="control-label">Notes</label>
-                        <input
-                               type="text"
-                               class="form-control">
+                        <textarea class="form-control"></textarea>
                     </div>
-                    <!--end replace by input-field-cmp-->
                 </div>
             </div>
         </div>
