--- a/app/pages/booking/booking-id/booking-id.component.html
+++ b/app/pages/booking/booking-id/booking-id.component.html
@@ -16,9 +16,11 @@
                                     <li class="">
                                         <a href="#past" data-toggle="tab">Past</a>
                                     </li>
+<!--
                                     <li class="">
                                         <a href="#forthcoming-details" data-toggle="tab">Forthcoming Details</a>
                                     </li>
+-->
                                 </ul>
                             </div>
                             <div class="col-xs-2 hidden">
@@ -36,11 +38,13 @@
                         <div class="booking-detail">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <property-info-cmp *ngIf="bookingService.booking" [data]="bookingService.booking"></property-info-cmp>
+                                    <property-info-cmp *ngIf="bookingService.booking && enquiryService.enquiry"
+                                                       [data]="bookingService.booking"
+                                                       [propertyId]="enquiryService.enquiry.Enquiry.PropertyId"></property-info-cmp>
                                     <payment-status-cmp *ngIf="bookingService.booking" [data]="bookingService.booking.Payments"></payment-status-cmp>
                                 </div>
                                 <div class="col-md-6">
-                                    <proposal-cmp [data]="enquiryService.enquiry"></proposal-cmp>
+                                    <!--<proposal-cmp *ngIf="enquiryService.enquiry" [data]="enquiryService.enquiry"></proposal-cmp>-->
                                 </div>
                             </div>
                         </div>
