--- a/app/pages/properties/setrates/setrates.component.html
+++ b/app/pages/properties/setrates/setrates.component.html
@@ -76,12 +76,12 @@
                                             </div>
                                         </td>
                                         <td width="20%">
-                                            <div class="form-group" *ngIf="isEdit[i]">
-                                                <input type="text"
-                                                       class="form-control"
-                                                       [formControl]="rateForm.controls.Value" />
-                                            </div>
-                                            <div class="form-group" *ngIf="!isEdit[i]">
+                                            <!--<div class="form-group" *ngIf="isEdit[i]">-->
+                                                <!--<input type="text"-->
+                                                       <!--class="form-control"-->
+                                                       <!--[formControl]="rateForm.controls.Value" />-->
+                                            <!--</div>-->
+                                            <div class="form-group">
                                                 <span class="text-value">{{rate.Value}}</span>
                                             </div>
                                         </td>
