implemented payment status

--- a/app/pages/booking/booking-id/booking-id.component.html
+++ b/app/pages/booking/booking-id/booking-id.component.html
@@ -41,7 +41,8 @@
                                     <property-info-cmp *ngIf="bookingService.booking && enquiryService.enquiry"
                                                        [data]="bookingService.booking"
                                                        [propertyId]="enquiryService.enquiry.Enquiry.PropertyId"></property-info-cmp>
-                                    <payment-status-cmp *ngIf="bookingService.booking" [data]="bookingService.booking.Payments"></payment-status-cmp>
+                                    <payment-status-cmp *ngIf="bookingService.booking"
+                                                        [data]="bookingService.booking.Payments"></payment-status-cmp>
                                 </div>
                                 <div class="col-md-6">
                                     <!--<proposal-cmp *ngIf="enquiryService.enquiry" [data]="enquiryService.enquiry"></proposal-cmp>-->
