--- a/app/components/booking/payment-status/payment-status.component.html
+++ b/app/components/booking/payment-status/payment-status.component.html
@@ -4,33 +4,23 @@
             <div class="heading-line">Payment Status</div>
         </div>
         <div class="col-xs-12">
-            <div class="status-line done">
-                Awaiting Payment from Agent
-                <div class="status-date pull-right">07/07/17</div>
+            <div *ngFor="let item of data; let i = index"
+                 class="status-line"
+                 [ngClass]="{
+                    done: item.Complete,
+                    current: (loginService.getRoles(item.RoleResponsible) && data[i - 1] && data[i - 1].Complete) || (loginService.getRoles(item.RoleResponsible) && !data[i - 1])
+                 }">
+                {{item.Description}}
+                <div class="status-date pull-right" *ngIf="item.CompletedAt">{{formatDate(item.CompletedAt, 'DD/MM/YYYY')}}</div>
+                <button *ngIf="(loginService.getRoles(item.RoleResponsible) && data[i - 1] && data[i - 1].Complete) || (loginService.getRoles(item.RoleResponsible) && !data[i - 1])"
+                        class="btn btn-success-green font-14 pull-right">Confirm</button>
             </div>
-            <div class="status-line done">
-                Payment Sent by Agent
-                <div class="status-date pull-right">08/07/17</div>
-            </div>
-            <div class="status-line done">
-                Payment Received by Privadia Exchange
-                <div class="status-date pull-right">08/07/17</div>
-            </div>
-            <div class="status-line done">
-                Payment Transferred to Manager
-                <div class="status-date pull-right">09/07/17</div>
-            </div>
-            <div class="status-line current">
+            <div class="status-line current hidden">
                 Payment Received by Manager
-                <button class="btn btn-success-green font-14 pull-right">Confirm</button>
-            </div>
-            <div class="status-line">
-                Booking Confirmed
             </div>
         </div>
         <div class="col-xs-12">
             <button class="btn btn-success-green font-16">Send Message</button>
         </div>
     </div>
-
 </div>
