--- a/app/pages/properties/setrates/setrates.component.html
+++ b/app/pages/properties/setrates/setrates.component.html
@@ -76,11 +76,11 @@
                                             </div>
                                         </td>
                                         <td width="20%">
-                                            <!--<div class="form-group" *ngIf="isEdit[i]">-->
-                                                <!--<input type="text"-->
-                                                       <!--class="form-control"-->
-                                                       <!--[formControl]="rateForm.controls.Value" />-->
-                                            <!--</div>-->
+                                            <div class="form-group" *ngIf="isEdit[i]">
+                                                <input type="text"
+                                                       class="form-control"
+                                                       [formControl]="rateForm.controls.Value" />
+                                            </div>
                                             <div class="form-group">
                                                 <span class="text-value">{{rate.Value}}</span>
                                             </div>
