--- a/app/pages/booking/booking-id/booking-id.component.html
+++ b/app/pages/booking/booking-id/booking-id.component.html
@@ -16,11 +16,6 @@
                                     <li class="">
                                         <a href="#past" data-toggle="tab">Past</a>
                                     </li>
-<!--
-                                    <li class="">
-                                        <a href="#forthcoming-details" data-toggle="tab">Forthcoming Details</a>
-                                    </li>
--->
                                 </ul>
                             </div>
                             <div class="col-xs-2 hidden">
@@ -45,15 +40,12 @@
                                                         [data]="bookingService.booking.Payments"></payment-status-cmp>
                                 </div>
                                 <div class="col-md-6">
-                                    <!--<proposal-cmp *ngIf="enquiryService.enquiry" [data]="enquiryService.enquiry"></proposal-cmp>-->
+                                    <proposal-cmp *ngIf="enquiryService.enquiry" [data]="enquiryService.enquiry"></proposal-cmp>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane" id="current">
-                        <!--
-                        <enquiries-table-cmp [data]="enquiryService.enquiries"></enquiries-table-cmp>
-                        -->
                     </div>
                     <div class="tab-pane" id="past">
 
@@ -70,64 +62,3 @@
         <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
     </svg>
 </div>
-<!--
-<div class="main-content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-header card-header-icon" data-background-color="blue">
-                        <i class="material-icons">assignment</i>
-                    </div>
-                    <div class="card-content">
-                        <h4 class="card-title">Booking</h4>
-                        <div class="toolbar">
-                            <button class="btn btn-simple secondary-color shadow-grey pull-right" (click)="addBooking">
-                            	Add Booking
-                            </button>
-                        </div>
-                        <div class="material-datatables">
-                            <table id="datatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
-                                <thead>
-                                    <tr>
-                                        <th>ID</th>
-                                        <th>Property</th>
-                                        <th>Full Name</th>
-                                        <th>Check In</th>
-                                        <th>Check Out</th>
-                                        <th class="disabled-sorting text-right">Options</th>
-                                    </tr>
-                                </thead>
-                                <tfoot>
-                                    <tr>
-                                        <th>ID</th>
-                                        <th>Property</th>
-                                        <th>Full Name</th>
-                                        <th>Check In</th>
-                                        <th>Check Out</th>
-                                        <th class="disabled-sorting text-right">Options</th>
-                                    </tr>
-                                </tfoot>
-                                <tbody id="bookingTableBody">
-                                    <tr *ngFor="let item of bookings; let i = index; let last = last ">
-                                        <td>{{item.Id}}</td>
-                                        <td>{{item.PropertyName}}</td>
-                                        <td>{{item.GuestName}}</td>
-                                        <td>{{item.CheckIn}}</td>
-                                        <td>{{item.CheckOut}}</td>
-                                        <td class="text-right">
-                                            <button class="btn btn-simple btn-warning btn-icon"><i class="material-icons shadow-grey">edit</i></button>
-                                            <button class="btn btn-simple btn-danger btn-icon"><i class="material-icons shadow-grey">close</i></button>
-                                        </td>
-										{{ !reading && last && !datatableInited ? finishReading() : "" }}
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
--->
